--- a/GroupNote/res/layout/create_session.xml
+++ b/GroupNote/res/layout/create_session.xml
@@ -21,28 +21,16 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/textView1"
-        android:layout_marginRight="127dp"
         android:layout_marginTop="54dp"
         android:ems="10"
         android:inputType="textShortMessage" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/editText1"
-        android:layout_marginRight="21dp"
-        android:layout_toLeftOf="@+id/editText1"
-        android:text="Name"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="35sp" />
 
     <EditText
         android:id="@+id/EditText01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/TextView01"
-        android:layout_alignLeft="@+id/editText1"
+        android:layout_alignParentRight="true"
         android:ems="10"
         android:inputType="textShortMessage" />
 
@@ -55,17 +43,7 @@
         android:layout_marginTop="44dp"
         android:text="Passcode"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="35sp" />
-
-    <CheckBox
-        android:id="@+id/checkBox1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/EditText01"
-        android:layout_below="@+id/EditText01"
-        android:layout_marginTop="48dp"
-        android:text="   Use Passcode?"
-        android:textSize="35sp" />
+        android:textSize="25sp" />
 
     <CheckBox
         android:id="@+id/CheckBox01"
@@ -75,17 +53,38 @@
         android:layout_below="@+id/checkBox1"
         android:layout_marginTop="34dp"
         android:text="   Use Location?"
-        android:textSize="35sp" />
+        android:textSize="25sp" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/editText1"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="72dp"
+        android:text="Name"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="25sp" />
+
+    <CheckBox
+        android:id="@+id/checkBox1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/EditText01"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="45dp"
+        android:text="   Use Passcode?"
+        android:textSize="25sp" />
 
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/CheckBox01"
-        android:layout_marginTop="41dp"
+        android:gravity="center_vertical|center_horizontal"
         android:text="Create Session"
-        android:textSize="35sp" />
+        android:textSize="25sp" />
 
 </RelativeLayout>
