--- a/GroupNoteApp/res/layout/create_session.xml
+++ b/GroupNoteApp/res/layout/create_session.xml
@@ -16,13 +16,13 @@
         android:textSize="45sp" />
 
     <EditText
-        android:id="@+id/usernametext"
+        android:id="@+id/sessionametext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/passcodetext"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/textView1"
         android:layout_marginTop="54dp"
+        android:layout_toRightOf="@+id/textView2"
         android:ems="10"
         android:inputType="textShortMessage" />
 
@@ -58,24 +58,23 @@
         android:textSize="25sp" />
 
     <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/sessionametext"
+        android:layout_alignParentLeft="true"
+        android:text="Session Name"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="25sp" />
+
+    <TextView
         android:id="@+id/TextView01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView2"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="44dp"
-        android:text="Passcode"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="25sp" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/usernametext"
-        android:layout_alignLeft="@+id/TextView01"
-        android:text="Username"
+        android:layout_marginTop="45dp"
+        android:text="Password"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="25sp" />
 
