--- a/GroupNoteApp/res/layout/edit_note.xml
+++ b/GroupNoteApp/res/layout/edit_note.xml
@@ -13,7 +13,7 @@
         android:orientation="vertical" >
 
         <EditText
-            android:id="@+id/usernametext"
+            android:id="@+id/sessionametext"
             android:layout_width="561dp"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
