--- a/GroupNoteApp/res/layout/settings.xml
+++ b/GroupNoteApp/res/layout/settings.xml
@@ -31,8 +31,9 @@
         android:id="@+id/Button03"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button5"
+        android:layout_alignRight="@+id/button5"
         android:layout_below="@+id/button5"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
         android:text="Logout"
         android:textSize="25sp" />
