--- a/GroupNoteApp/res/layout/create_session.xml
+++ b/GroupNoteApp/res/layout/create_session.xml
@@ -5,7 +5,7 @@
     tools:context=".CreateSession" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/sessionnametext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -16,11 +16,11 @@
         android:textSize="45sp" />
 
     <EditText
-        android:id="@+id/sessionametext"
+        android:id="@+id/notetext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/textView1"
+        android:layout_below="@+id/sessionnametext"
         android:layout_marginTop="54dp"
         android:layout_toRightOf="@+id/textView2"
         android:ems="10"
@@ -61,7 +61,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/sessionametext"
+        android:layout_alignBottom="@+id/notetext"
         android:layout_alignParentLeft="true"
         android:text="Session Name"
         android:textAppearance="?android:attr/textAppearanceLarge"
