--- a/GroupNoteApp/res/layout/edit_note.xml
+++ b/GroupNoteApp/res/layout/edit_note.xml
@@ -13,7 +13,7 @@
         android:orientation="vertical" >
 
         <EditText
-            android:id="@+id/sessionametext"
+            android:id="@+id/notetext"
             android:layout_width="561dp"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
@@ -31,7 +31,7 @@
         android:layout_alignParentTop="true" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/sessionnametext"
             android:layout_width="wrap_content"
             android:layout_height="54dp"
             android:layout_weight="0.35"
