--- a/GroupNoteApp/res/layout/my_notes.xml
+++ b/GroupNoteApp/res/layout/my_notes.xml
@@ -5,7 +5,7 @@
     tools:context=".MyNotes" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/sessionnametext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1" >
+        android:layout_below="@+id/sessionnametext" >
 
     </ListView>
 
