--- a/GroupNoteApp/res/layout/view_note.xml
+++ b/GroupNoteApp/res/layout/view_note.xml
@@ -5,7 +5,7 @@
     tools:context=".MainActivity" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/sessionnametext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
