--- a/GroupNoteApp/res/layout/edit_note.xml
+++ b/GroupNoteApp/res/layout/edit_note.xml
@@ -16,8 +16,7 @@
             android:id="@+id/notetext"
             android:layout_width="561dp"
             android:layout_height="wrap_content"
-            android:inputType="textMultiLine"
-            android:text="Your notes here" >
+            android:inputType="textMultiLine" >
 
             <requestFocus />
         </EditText>
@@ -40,16 +39,14 @@
 
         <Button
             android:id="@+id/button2"
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.35"
-            android:text="Refresh" />
+            android:text="Sync" />
 
         <Button
             android:id="@+id/button1"
-            android:layout_width="wrap_content"
+            android:layout_width="69dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.35"
             android:text="Zoom Out" />
     </LinearLayout>
 
