--- a/GroupNoteApp/res/layout/notes_overview.xml
+++ b/GroupNoteApp/res/layout/notes_overview.xml
@@ -7,6 +7,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
         android:text="@string/hello_world" />
 
 </RelativeLayout>
