--- a/GroupNoteApp/res/layout/edit_note.xml
+++ b/GroupNoteApp/res/layout/edit_note.xml
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="54dp"
             android:layout_weight="0.35"
-            android:text="Session Name: "
+            android:text="Session: "
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <Button
