--- a/GroupNoteApp/res/layout/edit_note.xml
+++ b/GroupNoteApp/res/layout/edit_note.xml
@@ -47,7 +47,7 @@
             android:id="@+id/button1"
             android:layout_width="69dp"
             android:layout_height="wrap_content"
-            android:text="Zoom Out" />
+            android:text="All" />
     </LinearLayout>
 
 </RelativeLayout>
